--- a/AcePos/src/main/webapp/index.html
+++ b/AcePos/src/main/webapp/index.html
@@ -11,7 +11,7 @@ and open the template in the editor.
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
     </head>
     <body>
-        <a href="main">Hello</a>
-        <div>TODO write content</div>
+        <h1 style="text-align: center">Welcome to Store management system</h1>
+        <a href="login" style="text-align: center">Login</a>
     </body>
 </html>
